objects/Account_Support_Request__c/fields/Days_elapsed_from_Sent_to_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Days_elapsed_from_Sent_to_Advisor__c</fullName>
    <description>Today - Date sent to Sr. Advisor</description>
    <formula>Today() -  Date_Sent_to_Sr_Advisor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Today - Date sent to Sr. Advisor</inlineHelpText>
    <label>Days elapsed from Sent to Advisor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>