objects/Account_Support_Request__c/fields/Days_elapsed_Request_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Days_elapsed_Request_Acknowledged__c</fullName>
    <formula>Today() -  Date_Request_Acknowledged_by_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days elapsed Request Acknowledged by Connection</inlineHelpText>
    <label>Days elapsed Request Acknowledged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>