objects/Account_Support_Request__c/fields/Days_Elapsed_Since_Sent_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Elapsed_Since_Sent_to_Contact__c</fullName>
    <description>Today minus Date meeting request was sent to Contact.</description>
    <formula>TODAY()  -  Date_Meeting_Request_sent_to_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Today minus Date meeting request was sent to Contact.</inlineHelpText>
    <label>Days Elapsed Since Sent to Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>