objects/Account_Support_Request__c/fields/Days_since_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Meeting__c</fullName>
    <description>Today - Meeting Date</description>
    <formula>Today() - Date_of_Meeting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Today - Meeting Date</inlineHelpText>
    <label>Days since Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>