objects/Account_Support_Request__c/fields/Days_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Close__c</fullName>
    <formula>Opportunity_Close_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>