objects/Account_Support_Request__c/fields/Deal_Focus_SOW_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Focus_SOW_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created upon Justin&apos;s request. For more information, refer to the ticket INC0123864</description>
    <label>Deal Focus SOW Confirmed</label>
    <type>Checkbox</type>
</CustomField>