objects/Account_Support_Request__c/fields/Deliverable_Requested__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Requested__c</fullName>
    <inlineHelpText>Preliminary Business Value Analysis - Teaser; can be turned around quickly without customer input
Full Business Case (ROI Model) - Will require customer collaboration to complete
Custom - Please specify in the Custom Deliverables Requested</inlineHelpText>
    <label>Deliverable Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Business Value Analysis</fullName>
            </value>
            <value>
                <fullName>Full ROI Model</fullName>
            </value>
            <value>
                <fullName>Custom - Please provide details below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>