objects/Account_Support_Request__c/fields/Desc_of_Sr_Advisor_E_Staff_Connection__c.field-meta.xml
<CustomField>
    <fullName>Desc_of_Sr_Advisor_E_Staff_Connection__c</fullName>
    <description>Senior Advisor Layout V2</description>
    <inlineHelpText>What are the known connections between the Sr. Advisor/Estaff and the account</inlineHelpText>
    <label>Advisor&apos;s/E-Staff&apos;s Contact</label>
    <type>TextArea</type>
</CustomField>