objects/Account_Support_Request__c/fields/Describe_POC_Environment__c.field-meta.xml
<CustomField>
    <fullName>Describe_POC_Environment__c</fullName>
    <inlineHelpText>Please attach any relevant POC documents with your description.</inlineHelpText>
    <label>Describe POC Environment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>