objects/Account_Support_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>