objects/Account_Support_Request__c/fields/Did_Influence_Partner_source_this_oppty__c.field-meta.xml
<CustomField>
    <fullName>Did_Influence_Partner_source_this_oppty__c</fullName>
    <inlineHelpText>bring  Tanium into the opportunity</inlineHelpText>
    <label>Did Influence Partner source this oppty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>