objects/Account_Support_Request__c/fields/Distro_RelayServersforCurrentTools__c.field-meta.xml
<CustomField>
    <fullName>Distro_RelayServersforCurrentTools__c</fullName>
    <inlineHelpText>This is a count of servers required to run the current tools; referred to as a distribution or relay server</inlineHelpText>
    <label>#Distro/Relay Servers for Current Tools</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>