objects/Account_Support_Request__c/fields/EBC_Any_dietary_restrictions__c.field-meta.xml
<CustomField>
    <fullName>EBC_Any_dietary_restrictions__c</fullName>
    <label>Any dietary restrictions?</label>
    <type>TextArea</type>
</CustomField>