objects/Account_Support_Request__c/fields/EBC_Any_equipment_needed__c.field-meta.xml
<CustomField>
    <fullName>EBC_Any_equipment_needed__c</fullName>
    <inlineHelpText>Choose all the equipment needed</inlineHelpText>
    <label>Equipment needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clicker</fullName>
            </value>
            <value>
                <fullName>Mac adaptor</fullName>
            </value>
            <value>
                <fullName>PC adaptor</fullName>
            </value>
            <value>
                <fullName>Loaner laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>