objects/Account_Support_Request__c/fields/EBC_Background_Information__c.field-meta.xml
<CustomField>
    <fullName>EBC_Background_Information__c</fullName>
    <inlineHelpText>Have we tried to get into the account before? If we failed, why? 
Customer: Are they fully using Tanium? If not, why not?</inlineHelpText>
    <label>Background Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>