objects/Account_Support_Request__c/fields/EBC_Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>EBC_Date_of_Meeting__c</fullName>
    <inlineHelpText>Leave blank if you don&apos;t know. We require at least 4 weeks notice. Subject to availability of executives and HQ resources.</inlineHelpText>
    <label>EBC Meeting Date</label>
    <type>Date</type>
</CustomField>