objects/Account_Support_Request__c/fields/EBC_Is_Lunch_Requested__c.field-meta.xml
<CustomField>
    <fullName>EBC_Is_Lunch_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field added to EBC RT and Pagelayout Ref: Debbie Mansfield</description>
    <inlineHelpText>Lunch is provided daily at Tanium HQ</inlineHelpText>
    <label>Is Lunch Requested?</label>
    <type>Checkbox</type>
</CustomField>