objects/Account_Support_Request__c/fields/EBC_Lunch_Options__c.field-meta.xml
<CustomField>
    <fullName>EBC_Lunch_Options__c</fullName>
    <label>Lunch Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bring to 16th Fl</fullName>
            </value>
            <value>
                <fullName>Reserve Table on 3rd Fl</fullName>
            </value>
            <value>
                <fullName>Reserve room on 3rd Fl</fullName>
            </value>
            <value>
                <fullName>Order/Cater to the meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>