objects/Account_Support_Request__c/fields/EBC_Objectives__c.field-meta.xml
<CustomField>
    <fullName>EBC_Objectives__c</fullName>
    <inlineHelpText>What do you hope to accomplish by having this meeting?</inlineHelpText>
    <label>EBC Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>