objects/Account_Support_Request__c/fields/EBC_Time_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>EBC_Time_of_Meeting__c</fullName>
    <inlineHelpText>Leave blank if you don&apos;t know. Subject to availability of executives and HQ resources.</inlineHelpText>
    <label>EBC Time of Meeting</label>
    <type>Time</type>
</CustomField>