objects/Account_Support_Request__c/fields/EBC_Will_all_guests_be_attending__c.field-meta.xml
<CustomField>
    <fullName>EBC_Will_all_guests_be_attending__c</fullName>
    <inlineHelpText>If not, we will set up a Zoom dial in.</inlineHelpText>
    <label>Will all guests be attending in person?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>