objects/Account_Support_Request__c/fields/EDR__c.field-meta.xml
<CustomField>
    <fullName>EDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this option for EDR resource</description>
    <inlineHelpText>Select this option for EDR resource</inlineHelpText>
    <label>UES</label>
    <type>Checkbox</type>
</CustomField>