objects/Account_Support_Request__c/fields/EDR_Assigned_2__c.field-meta.xml
<CustomField>
    <fullName>EDR_Assigned_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UES Assigned 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EDR_ISR2</relationshipName>
    <type>Lookup</type>
</CustomField>