objects/Account_Support_Request__c/fields/EDR_Resource__c.field-meta.xml
<CustomField>
    <fullName>EDR_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EDR Resource assigned to the ISR</description>
    <inlineHelpText>EDR Resource assigned to the ISR</inlineHelpText>
    <label>UES Assigned 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ISR_EDR</relationshipName>
    <type>Lookup</type>
</CustomField>