objects/Account_Support_Request__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email of specific contact for introduction
05/19/2020: Updated label to Contract Source (Board or Executive) per Lori T&apos;s request
03/22/2021: Updated label to Target Contact Info per Justin&apos;s request</description>
    <inlineHelpText>Email of specific contact for introduction</inlineHelpText>
    <label>Target Contact Info</label>
    <type>TextArea</type>
</CustomField>