objects/Account_Support_Request__c/fields/Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box to be checked as an action item on WFR: Monthly update notification v2
Created as a check for email alerts</description>
    <label>Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>