objects/Account_Support_Request__c/fields/Enrollment_Key__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Key__c</fullName>
    <description>This field is for Technical Enablement Team to track the specific training “Key” that is built out in LMS. 
Example of a Key “2025.05.02.disney.tane.ilt (year.month.date.account name.course name.modality)</description>
    <inlineHelpText>Enrollment Key used to identify specific training class</inlineHelpText>
    <label>Enrollment Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>