objects/Account_Support_Request__c/fields/Ent_Srvcs_Engineer_Remote__c.field-meta.xml
<CustomField>
    <fullName>Ent_Srvcs_Engineer_Remote__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Remote operational support Needed</inlineHelpText>
    <label># of Enterprise Srvcs Eng - Remote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>