objects/Account_Support_Request__c/fields/ES_3_Full_time_or_Part_time__c.field-meta.xml
<CustomField>
    <fullName>ES_3_Full_time_or_Part_time__c</fullName>
    <description>Added per Katee Guzman and Kendra Sands request
For ESO ISR</description>
    <label>ES 3 Full-time or Part-time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>