objects/Account_Support_Request__c/fields/ES_Resource_Security_Clearance_Require__c.field-meta.xml
<CustomField>
    <fullName>ES_Resource_Security_Clearance_Require__c</fullName>
    <description>11/4/25 - Change of Field Type (Text to Picklist) and change of Label (SS-10397)

Ref: Katee Guzman 
Added to ESO ISR</description>
    <inlineHelpText>Please be sure the security clearance you provide is final and correct as this is what will be used for recruiting the resource.</inlineHelpText>
    <label>Security Clearance Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>US_Confidential</fullName>
            </value>
            <value>
                <fullName>US_Secret</fullName>
            </value>
            <value>
                <fullName>US_TS</fullName>
            </value>
            <value>
                <fullName>US_Secret/SCI</fullName>
            </value>
            <value>
                <fullName>US_TS/SCI</fullName>
            </value>
            <value>
                <fullName>US_CI Poly</fullName>
            </value>
            <value>
                <fullName>US_FS Poly</fullName>
            </value>
            <value>
                <fullName>UK_SC</fullName>
            </value>
            <value>
                <fullName>UK_DV</fullName>
            </value>
            <value>
                <fullName>Other (Explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>