objects/Account_Support_Request__c/fields/ES_Resource_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>ES_Resource_Work_Location__c</fullName>
    <description>ES resource work location</description>
    <inlineHelpText>Enter ‘Remote’ if the ESO will work remotely. If on-site work is required enter the specific location; Country, City, State, and Postal Code</inlineHelpText>
    <label>ESO Resource Work Location</label>
    <type>TextArea</type>
</CustomField>