objects/Account_Support_Request__c/fields/ESE_Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ESE_Estimated_End_Date__c</fullName>
    <description>ESE Estimated End Date</description>
    <inlineHelpText>ESE Estimated End Date</inlineHelpText>
    <label>ESE - Estimated End Date</label>
    <type>Date</type>
</CustomField>