objects/Account_Support_Request__c/fields/ESE_Location__c.field-meta.xml
<CustomField>
    <fullName>ESE_Location__c</fullName>
    <description>ESE Work Location</description>
    <inlineHelpText>ESE Work Location</inlineHelpText>
    <label>ESE Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>