objects/Account_Support_Request__c/fields/ESE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ESE_Start_Date__c</fullName>
    <description>ESO Resource Start Date</description>
    <inlineHelpText>ESO Resource Start Date</inlineHelpText>
    <label>ESE Start Date</label>
    <type>Date</type>
</CustomField>