objects/Account_Support_Request__c/fields/ESO_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>ESO_Approval_Notes__c</fullName>
    <description>Approval notes from Egon/ Dylan - added to quote approval template</description>
    <inlineHelpText>Notes from ISR Approver</inlineHelpText>
    <label>ESO Approval Notes</label>
    <type>TextArea</type>
</CustomField>