objects/Account_Support_Request__c/fields/ESO_ISR_Approved__c.field-meta.xml
<CustomField>
    <fullName>ESO_ISR_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked by PB &quot;Create ISRRs from ESO ISR&quot;. This is added to ensure that the PB &quot;Create ISRRs from ESO ISR&quot; only run once upon Approval</description>
    <label>ESO ISR Approved</label>
    <type>Checkbox</type>
</CustomField>