objects/Account_Support_Request__c/fields/ESO_Origination__c.field-meta.xml
<CustomField>
    <fullName>ESO_Origination__c</fullName>
    <description>Original request was checkboxes. Suggested one multiple picklist</description>
    <inlineHelpText>Select the reason(s) Customer needs ESO resource(s) to operationalize or embed Tanium in their environment.
Critical: Customer will churn, all hands on deck
Customer: Existing Tanium Customer.
Prospect: Not yet sold.</inlineHelpText>
    <label>ESO Origination</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>