objects/Account_Support_Request__c/fields/ESO_Selection__c.field-meta.xml
<CustomField>
    <fullName>ESO_Selection__c</fullName>
    <description>This selection will appear after clicking the Create ESO Request. This will direct the flow to show certain fields for various kinds of ESO Support needed.</description>
    <label>ESO Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1wk Support ONLY</fullName>
            </value>
            <value>
                <fullName>24x7 Support ONLY</fullName>
                <isActive>false</isActive>
                <label>24x7 Support ONLY</label>
            </value>
            <value>
                <fullName>8x5 Support ONLY</fullName>
                <isActive>false</isActive>
                <label>8x5 Support ONLY</label>
            </value>
            <value>
                <fullName>Block of Hours - Support</fullName>
                <isActive>false</isActive>
                <label>Block of Hours - Support</label>
            </value>
            <value>
                <fullName>Cloud Migration</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprise Deployment</fullName>
            </value>
            <value>
                <fullName>ESO Hands on Keyboard Support (Traditional ESO)</fullName>
                <isActive>false</isActive>
                <label>ESO Hands on Keyboard Support (Traditional ESO)</label>
            </value>
            <value>
                <fullName>Fed Bundle</fullName>
                <isActive>false</isActive>
                <label>Fed Bundle</label>
            </value>
            <value>
                <fullName>Ops Express Bundle</fullName>
                <isActive>false</isActive>
                <label>Ops Express Bundle</label>
            </value>
            <value>
                <fullName>Service Package</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Tenant Health Monitoring</fullName>
                <isActive>false</isActive>
                <label>Tenant Health Monitoring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>