objects/Account_Support_Request__c/fields/ESO_Selection_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ESO_Selection_ID_Formula__c</fullName>
    <description>ESO Selection in ESO ISR is mapped to &quot;Proposition&quot; object in Kimble. 
Used in Kimble Proposal creation via flow.
SS-194</description>
    <formula>IF(

ISPICKVAL(ESO_Selection__c,&quot;Emerging Enterprise Deployment&quot;),&quot;aEK7V000000KykO&quot;,

IF(
ISPICKVAL(ESO_Selection__c,&quot;Staff Augmentation&quot;),&quot;aEK7V000000KykP&quot;,

IF(
ISPICKVAL(ESO_Selection__c,&quot;Tenant Health Monitoring&quot;),&quot;aEK53000000Gmoo&quot;,

IF(
ISPICKVAL(ESO_Selection__c, &quot;Cloud Migration&quot;),&quot;aEK7V000000KykQ&quot;,
				
IF(
ISPICKVAL(ESO_Selection__c, &quot;Service Package&quot;),&quot;aEKRO0000009VhJ4AU&quot;,&quot;&quot;

)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESO Selection ID Formula</label>
    <type>Text</type>
</CustomField>