objects/Account_Support_Request__c/fields/ESO_Specializations__c.field-meta.xml
<CustomField>
    <fullName>ESO_Specializations__c</fullName>
    <description>4/24/19 Updated Label to &quot;ESO Specializations/Modules Needed&quot; per David Mkrtchian request</description>
    <inlineHelpText>Needs of particular skills or subject matters. E.g. This customer is looking for someone to help run the Patch and Deploy modules. This customer is also looking for help integrating with Splunk.</inlineHelpText>
    <label>ESO Specializations/Modules Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>