objects/Account_Support_Request__c/fields/ESO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ESO_Start_Date__c</fullName>
    <inlineHelpText>Proposed Start Date. 2 months ramp-time is likely necessary.</inlineHelpText>
    <label>Requested Start Date</label>
    <type>Date</type>
</CustomField>