objects/Account_Support_Request__c/fields/Estimate_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Endpoint__c</fullName>
    <formula>Account__r.Tanium_Derived_Estimated_Endpoints_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Endpoint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>