objects/Account_Support_Request__c/fields/Event_Conference__c.field-meta.xml
<CustomField>
    <fullName>Event_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you don’t see Event&apos;Conference required please reach out to Executive Engagement Team.</inlineHelpText>
    <label>Event/Conference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event__c.Event_Conference_Expired__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Value does not exist or is expired.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Internal Support Requests</relationshipLabel>
    <relationshipName>Internal_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>