objects/Account_Support_Request__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>For Training Request ISR</description>
    <label>Event Name</label>
    <type>TextArea</type>
</CustomField>