objects/Account_Support_Request__c/fields/Exception_Country__c.field-meta.xml
<CustomField>
    <fullName>Exception_Country__c</fullName>
    <description>This value set is being used in the Internal Support request: Exception Country currently. The values are similar to Account: HQ Country. Anytime when Account: HQ Country has been changed. This picklist value should be updated accordingly. Jira SS-532</description>
    <label>Exception Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exception_Country</valueSetName>
    </valueSet>
</CustomField>