objects/Account_Support_Request__c/fields/Executive_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_First_Name__c</fullName>
    <formula>Tanium_Executive_Invited__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive First Name</label>
    <type>Text</type>
</CustomField>