objects/Account_Support_Request__c/fields/Expected_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Recurring_Revenue__c</fullName>
    <description>Expected Annual Recurring Revenue
Country Exceptions</description>
    <label>Expected Annual Recurring Revenue</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>