objects/Account_Support_Request__c/fields/Expected_Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Customer_Attendees__c</fullName>
    <description>Captures the expected attendees from the customer side for the meeting. SS-13320</description>
    <inlineHelpText>Enter names, titles, or roles of expected customer attendees.</inlineHelpText>
    <label>Expected Customer Attendees</label>
    <type>TextArea</type>
</CustomField>