objects/Account_Support_Request__c/fields/Expected_TCV__c.field-meta.xml
<CustomField>
    <fullName>Expected_TCV__c</fullName>
    <label>Expected TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>