objects/Account_Support_Request__c/fields/Final_Action_Items_from_Meeting_Call__c.field-meta.xml
<CustomField>
    <fullName>Final_Action_Items_from_Meeting_Call__c</fullName>
    <description>For Senior Advisor Layout v2</description>
    <inlineHelpText>Completed by Sales after introductory meeting/call (i.e. next steps/action items)</inlineHelpText>
    <label>Final Action Items from Meeting/Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>