objects/Account_Support_Request__c/fields/Final_Action_Items_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Action_Items_Notes__c</fullName>
    <inlineHelpText>This field captures history with WF rule from Final Action Items from Meeting/Call in status section</inlineHelpText>
    <label>Final Action Items Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>