objects/Account_Support_Request__c/fields/Flexible_Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Meeting_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Time and date flexible - TBD based upon PM’s and customers availability</inlineHelpText>
    <label>Flexible Meeting Time</label>
    <type>Checkbox</type>
</CustomField>