objects/Account_Support_Request__c/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <description>Ref: Jack Coates</description>
    <label>Focus Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Platform</fullName>
            </value>
            <value>
                <fullName>Autonomous Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Endpoint Management</fullName>
            </value>
            <value>
                <fullName>Investigate and Respond</fullName>
            </value>
            <value>
                <fullName>Digital Employee Experience</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
                <label>Risk and Compliance</label>
            </value>
            <value>
                <fullName>Exposure Management</fullName>
            </value>
            <value>
                <fullName>Security Operations</fullName>
            </value>
            <value>
                <fullName>Endpoint Management for OT</fullName>
            </value>
            <value>
                <fullName>Endpoint Management for Mobile</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
                <isActive>false</isActive>
                <label>Operations</label>
            </value>
            <value>
                <fullName>Risk and Compliance</fullName>
                <isActive>false</isActive>
                <label>Risk and Compliance</label>
            </value>
            <value>
                <fullName>Salesforce ITSC</fullName>
                <isActive>false</isActive>
                <label>Salesforce ITSC</label>
            </value>
            <value>
                <fullName>Security</fullName>
                <isActive>false</isActive>
                <label>Security</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>