objects/Account_Support_Request__c/fields/Forbes_Global_2000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Global_2000_Rank__c</fullName>
    <description>Forbes Global 2000 Rank from Account</description>
    <formula>Account__r.Forbes_Global_2000_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forbes Global 2000 Rank from Account</inlineHelpText>
    <label>Forbes Global 2000 Rank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>