objects/Account_Support_Request__c/fields/Forecast_Status_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status_Id_Formula__c</fullName>
    <description>SS-13637 - Updated the stagenumber values.
&quot;Forecast Status&quot; is an object in Kimble. 
This field will fill in Kimble&apos;s Forecast Status RT ID and pass it on to Flow: &quot;Create Kimble Proposal&quot; to create Proposal in Kimble upon ESO ISR Approval. 
Only visible to Admins for troubleshooting. 
Ref: SS-194</description>
    <formula>CASE(Opportunity__r.StageNumber__c,
10, &quot;aCH7V000000L0Bw&quot;,
20, &quot;aCH7V000000L0Bw&quot;,
30, &quot;aCH7V000000L0Bx&quot;,
50, &quot;aCH7V000000L0Bu&quot;,
60, &quot;aCH7V000000L0Bq&quot;,
70, &quot;aCH7V000000L0Bo&quot;,
100, &quot;aCH7V000000L0Bo&quot;,
110, &quot;aCH7V000000L0Bo&quot;,
120, &quot;aCH7V000000L0Bo&quot;,
130, &quot;aCH7V000000L0Bo&quot;,
&quot;aCH7V000000L0Bv&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Status Id Formula</label>
    <type>Text</type>
</CustomField>