objects/Account_Support_Request__c/fields/Future_Competitive_Point_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Future_Competitive_Point_Solutions__c</fullName>
    <inlineHelpText>Please list any competitors that are also being considered.</inlineHelpText>
    <label>Future Competitive Point Solutions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>