objects/Account_Support_Request__c/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <label>Geographic Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas &amp; LATAM</fullName>
            </value>
            <value>
                <fullName>Asia North</fullName>
            </value>
            <value>
                <fullName>Asia South</fullName>
            </value>
            <value>
                <fullName>Dach</fullName>
            </value>
            <value>
                <fullName>EMEA North</fullName>
            </value>
            <value>
                <fullName>EMEA South</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>