objects/Account_Support_Request__c/fields/Ghost_email_enclosed__c.field-meta.xml
<CustomField>
    <fullName>Ghost_email_enclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ghost email enclosed</label>
    <type>Checkbox</type>
</CustomField>