objects/Account_Support_Request__c/fields/Goals_of_the_account__c.field-meta.xml
<CustomField>
    <fullName>Goals_of_the_account__c</fullName>
    <description>CSM ISR</description>
    <inlineHelpText>Tanium internal account goals (i.e. upsell x module(s) by targeting y team for z use case)</inlineHelpText>
    <label>Account Goals</label>
    <type>TextArea</type>
</CustomField>