objects/Account_Support_Request__c/fields/Hands_On_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hands_On_Start_Date__c</fullName>
    <description>SS-11385: field created.</description>
    <inlineHelpText>Expected hands-on-keyboard start date. Typically takes 30 days from when the addendum is signed.</inlineHelpText>
    <label>Hands-On Start Date</label>
    <type>Date</type>
</CustomField>